[build-system]
requires = [ "setuptools", "setuptools-scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-cell"
dynamic = [ "version", "dependencies" ]
description = "Jupyter Notebook → reStructuredText Cells"
readme = "README.rst"
requires-python = ">=3.11"
license.file = "LICENSE"
authors = [
  { name = "Akshay Mestry", email = "xa@mes3.dev" }
]
keywords = [ "jupyter", "sphinx", "python", "notebook" ]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Sphinx :: Theme",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation"
]
urls.Code = "https://github.com/xames3/jupyter-cell"
urls.Download = "https://pypi.org/project/jupyter-cell/"
urls.Homepage = "https://github.com/xames3/jupyter-cell/"
urls."Issue tracker" = "https://github.com/xames3/jupyter-cell/issues"

[project.scripts]
jupyter-cell = "jupyter_cell.__main__:main"

[tool.setuptools]
packages = ["jupyter_cell"]

[tool.setuptools.dynamic]
version = { attr = "jupyter_cell.version" }
dependencies = { file = "requirements.txt" }

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80
force_single_line = true
force_sort_within_sections = false

[tool.mypy]
files = ["jupyter_cells/*.py", "docs/*.py"]
show_error_codes = true
show_error_context = true
pretty = true
strict = true
show_column_numbers = true
warn_unreachable = true
warn_unused_ignores = true
